--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-pug": "^3.3.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0"
   },
